<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_user_photo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/surface"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_picture"
                    app:shapeAppearanceOverlay="@style/image_rounded" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/user_name"
                    android:textColor="@color/onSecondary"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"/>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_user_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_desc"
                android:textColor="@color/onSecondary"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_friend"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:backgroundTint="@color/onPrimaryContainer"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btn_add_friend"
                android:textAllCaps="false"
                android:textColor="@color/onSurface"
                android:textSize="12sp"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>